src/test/ui/impl-trait/issue-55872-3.stderr
error[E0277]: the trait bound `impl Future: Copy` is not satisfied
  --> $DIR/issue-55872-3.rs:15:9
   |
LL |         async {}
   |         ^^^^^^^^ the trait `Copy` is not implemented for `impl Future`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
